--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -66,7 +66,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/subtotal_root"
-        android:layout_below="@id/addmoreservline">
+        android:layout_below="@id/addmoreservline"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="0dp">
 
     </android.support.v7.widget.RecyclerView>
 
