--- a/app/src/main/res/layout/activity_service_item.xml
+++ b/app/src/main/res/layout/activity_service_item.xml
@@ -25,6 +25,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <RelativeLayout
+        android:visibility="gone"
         android:id="@+id/addmoreserv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -58,6 +59,7 @@
         android:layout_below="@id/addmoreserv"
         android:layout_marginHorizontal="5dp"
         android:background="#7c7c7c"></View>
+
 
     <LinearLayout
         android:id="@+id/service1_item_no_prop"
@@ -120,6 +122,7 @@
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
+        android:visibility="gone"
         android:id="@+id/service1_item_recycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -127,10 +130,118 @@
 
     </android.support.v7.widget.RecyclerView>
 
+    <LinearLayout
+        android:id="@+id/service1_1"
+        android:layout_below="@id/service1_item_no_prop"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".4"
+            android:textAlignment="viewEnd"
+            android:text="Service name:"/>
+        <TextView
+            android:id="@+id/service1_service_name"
+            android:paddingHorizontal="10dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".6"
+            android:text="Ac service"/>
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/service1_2"
+        android:layout_marginTop="5dp"
+        android:layout_below="@id/service1_1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".4"
+            android:textAlignment="viewEnd"
+            android:text="Worker name:"/>
+        <TextView
+            android:id="@+id/service1_worker_name"
+            android:paddingHorizontal="10dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".6"
+            android:text="Al amin"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/service1_3"
+        android:layout_marginTop="5dp"
+        android:layout_below="@id/service1_2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".4"
+            android:textAlignment="viewEnd"
+            android:text="Worker mobile:"/>
+        <TextView
+            android:id="@+id/service1_worker_mobile"
+            android:paddingHorizontal="10dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".6"
+            android:text="01715491365"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/service1_4"
+        android:layout_marginTop="5dp"
+        android:layout_below="@id/service1_3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".4"
+            android:textAlignment="viewEnd"
+            android:text="Delivery address:"/>
+        <TextView
+            android:id="@+id/service1_customer_address"
+            android:paddingHorizontal="10dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".6"
+            android:text="32/2, Kalabagan"/>
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/service1_5"
+        android:layout_marginTop="5dp"
+        android:layout_below="@id/service1_4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".4"
+            android:textAlignment="viewEnd"
+            android:text="Delivery date"/>
+        <TextView
+            android:id="@+id/service1_delivery_date"
+            android:paddingHorizontal="10dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".6"
+            android:text="16-6-2019"/>
+    </LinearLayout>
+
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="80dp"
         android:layout_above="@id/place_order_btn"
+        android:gravity="center_vertical"
         android:paddingHorizontal="20dp"
         android:paddingVertical="5dp"
         android:background="@color/greyLight">
@@ -157,12 +268,35 @@
             android:layout_toLeftOf="@id/service1_item_subtotal"
             android:text="৳"/>
         <TextView
+            android:id="@+id/ssss2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@id/sss"
+            android:text="You saved"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="5dp"
+            android:layout_below="@id/service1_item_subtotal"
+            android:layout_toLeftOf="@id/service1_item_savings2"
+            android:layout_alignParentBottom="true"
+            android:text="৳"/>
+        <TextView
+            android:id="@+id/service1_item_savings2"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:layout_below="@id/service1_item_subtotal"
+            android:layout_alignParentRight="true"
+            android:text="0"/>
+        <TextView
             android:id="@+id/ssss"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentBottom="true"
-            android:text="You saved"/>
+            android:text="net amount"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -170,14 +304,15 @@
             android:layout_toLeftOf="@id/service1_item_savings"
             android:layout_alignParentBottom="true"
             android:text="৳"/>
+
         <TextView
             android:id="@+id/service1_item_savings"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
-            android:text="0"/>
+            android:layout_alignParentBottom="true"
+            android:text="0"
+            android:textAlignment="center" />
 
     </RelativeLayout>
 
@@ -187,6 +322,7 @@
         android:layout_height="40dp"
         android:layout_alignParentBottom="true"
         android:text="Place Order"
+        android:textColor="@color/white"
         android:layout_marginVertical="10dp"
         android:background="@color/colorPrimary"
         android:layout_marginHorizontal="30dp"/>
